# better-editor

./: Cargo.toml
be-animation/: Cargo.toml
be-animation/src/: lib.rs
be-async/: Cargo.toml
be-async/src/: lib.rs
be-config/: Cargo.toml  default.toml
be-config-macros/: Cargo.toml
be-config-macros/src/: lib.rs
be-config/src/: config.rs  lib.rs  parse.rs  settings.rs
be-config/src/lang/: mod.rs
be-config/src/lang/builtin/: markdown.toml  rust.toml  toml.toml
be-crdt/: Cargo.toml
be-crdt/fuzz/: Cargo.toml
be-crdt/fuzz/fuzz_targets/: convergence.rs  single_store.rs
be-crdt/src/: lib.rs
be-doc/: Cargo.toml
be-doc/src/: edit.rs  fs.rs  lib.rs  search.rs  snap.rs
be-editor/: Cargo.toml
be-editor/src/: edit.rs  filetype.rs  fs.rs  highlight.rs  lib.rs  lsp.rs  moves.rs  status.rs  tests.rs  treesitter.rs
be-fs/: Cargo.toml
be-fs/src/: change.rs  lib.rs  path.rs
be-fs/src/watch/: fsevents.rs  inotify.rs  mod.rs
be-git/: Cargo.toml
be-git/src/: diff.rs  git.rs  lib.rs
be-gui/: .gitignore  Cargo.toml  build.rs
be-gui/src/: editor.rs  file_tree.rs  icon.rs  layout.rs  lib.rs  main.rs  pane.rs  theme.rs
be-gui/src/pane/: editor.rs  file_tree.rs  mod.rs  shell.rs
be-gui/src/render/: blit.wgsl  clipboard.rs  cursor.rs  mod.rs  text.rs  window.rs
be-gui/src/view/: command.rs  editor.rs  file_tree.rs  mod.rs  search.rs  shell.rs  terminal.rs
be-gui/src/widget/: border.rs  button.rs  mod.rs  padding.rs  split.rs  stack.rs
be-icon-importer/: Cargo.toml
be-icon-importer/src/: devicons.rs  lib.rs  lucide.rs
be-input/: Cargo.toml
be-input/src/: action.rs  clipboard.rs  key.rs  lib.rs
be-lsp/: Cargo.toml
be-lsp/src/: client.rs  command.rs  init.rs  lib.rs
be-lucide-importer/: Cargo.toml
be-lucide-importer/src/: lib.rs
be-macros/: Cargo.toml
be-macros/src/: lib.rs
be-notify/: Cargo.toml
be-notify/src/: change.rs  lib.rs
be-notify/src/watch/: inotify.rs  mod.rs
be-shared/: Cargo.toml
be-shared/src/: lib.rs
be-task/: Cargo.toml
be-task/src/: lib.rs
be-terminal/: Cargo.toml
be-terminal/src/: control.rs  grid.rs  lib.rs  pty.rs
be-workspace/: Cargo.toml
be-workspace/src/: lib.rs
