[package]
name = "be-editor"
version = "0.1.0"
edition = "2024"

[dependencies]
be-doc = { path = "../be-doc" }
be-input = { path = "../be-input" }
be-config = { path = "../be-config" }
be-task = { path = "../be-task" }
be-lsp = { path = "../be-lsp" }
be-git = { path = "../be-git" }

libc = "0.2.178"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tree-sitter = "0.26.3"
unicode-segmentation = "1.12.0"
log = "0.4.29"

[dev-dependencies]
expect-test.workspace = true
