[package]
name = "be-fs"
version = "0.1.0"
edition = "2024"

[target.'cfg(target_os = "linux")'.dependencies]
inotify = { version = "0.11", default-features = false }

[dependencies]
btree-slab = "0.6.1"
parking_lot = "0.12.5"
relative-path = "2.0.1"

[dev-dependencies]
expect-test.workspace = true
