[package]
name = "be-fs"
version = "0.1.0"
edition = "2024"

[target.'cfg(target_os = "linux")'.dependencies]
inotify = { version = "0.11", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
dispatch2 = "0.3.1"

[target.'cfg(target_os = "macos")'.dependencies.objc2-core-services]
version = "0.3.2"
default-features = false
features = ["FSEvents", "dispatch2"]

[target.'cfg(target_os = "macos")'.dependencies.objc2-core-foundation]
version = "0.3.2"
default-features = false
features = ["CFArray", "CFString"]

[dependencies]
btree-slab = "0.6.1"
crossbeam-channel = "0.5.15"
log = "0.4.29"
parking_lot = "0.12.5"
relative-path = "2.0.1"

[dev-dependencies]
expect-test.workspace = true
