[package]
name = "be-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
kurbo = "0.12"
parley = "0.7.0"
peniko = "0.5"
pollster = "0.4.0"
vello = "0.6.0"
wgpu = "26.0.1"
winit = "0.30.12"
skrifa = { version = "0.37", default-features = false }

be-doc = { path = "../be-doc" }
be-config = { path = "../be-config" }
be-input = { path = "../be-input" }
be-lsp = { path = "../be-lsp" }
be-editor = { path = "../be-editor" }
be-terminal = { path = "../be-terminal" }
be-animation = { path = "../be-animation" }

bytemuck = "1.24.0"
png = { version = "0.17", default-features = false }
fern = { version = "0.7.1", features = ["chrono"] }
log = "0.4.29"
chrono = { version = "0.4.42", default-features = false }
unicode-segmentation = "1.12.0"

puffin = "0.19.1"
puffin_http = "0.16.1"
nucleo = "0.5.0"
ignore = "0.4.25"
