[package]
name = "be-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
be-async = { path = "../be-async" }
be-doc = { path = "../be-doc" }
be-task = { path = "../be-task" }
crossbeam-channel = "0.5.15"
libc = "0.2.178"
log = "0.4.29"

lsp-types = "0.97.0"
parking_lot = "0.12.5"
polling = "3.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["raw_value"] }
