[package]
name = "be-terminal"
version = "0.1.0"
edition = "2024"

[dependencies]
anstyle-parse = "0.2.7"
be-async = { version = "0.1.0", path = "../be-async" }
bitflags = "2.10.0"
libc = "0.2.178"
log = "0.4.29"
polling = "3.11.0"
rustix = { version = "1.1.3", features = ["std"] }
rustix-openpty = "0.2.0"
unicode-width = "0.2.2"
