[package]
name = "be-crdt-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.be-crdt]
path = ".."

[[bin]]
name = "single_store"
path = "fuzz_targets/single_store.rs"
test = false
doc = false
bench = false
